Fix overflow issue in fagblogg teaser

--- a/src/fagblogg-teaser/fagblogg-teaser.css
+++ b/src/fagblogg-teaser/fagblogg-teaser.css
@@ -6,6 +6,8 @@
 
   margin-left: 10vw;
   margin-right: 10vw;
+
+  border: 2px solid rebeccapurple;
 }
 
 :host(:focus) {
@@ -28,14 +30,11 @@ ul {
   width: 100%;
   max-width: var(--content_width_max);
   position: relative;
-  min-height: 800px;
   margin: auto;
 }
 .bg {
   width: 100%;
-  height: 50%;
   position: relative;
-  top: 5rem;
 }
 
 miles-info {
@@ -69,13 +68,6 @@ miles-info {
   miles-info {
     left: unset;
     top: 1em;
-  }
-
-  .bg {
-    width: 100%;
-    height: 35%;
-    position: absolute;
-    top: 5rem;
   }
 }
 
